# qmd-python-cuda

./: .gitignore  AGENTS.md  ARCHIVED_TESTS.md  AUTO_FIX_REPORT.md  BENCHMARK_REPORT.md  CLEANUP_REPORT.md  CLI_MODE_ANALYSIS.md  CLI_SERVER_TEST_REPORT.md  DOCS_CLEANUP_FINAL.md  E2E_TEST_REPORT.md  FINAL_CONFIG.md  FINAL_TASKS.md  FINAL_TEST_REPORT.md  IMPORTANT_DOCS.md  OBSIDIAN_TEST_REPORT.md  OPENCLAW_COMPATIBILITY.md  OPENCLAW_INTEGRATION.py  PERFORMANCE_BENCHMARK_REPORT.md  PROJECT_COMPLETION_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  TESTING_SUMMARY.md  TEST_REPORT.md  TODO.md  TODO_SYSTEM_SETUP.md  auto_fix.py  benchmark_concurrent.py  check_db_tables.py  check_docs.py  check_documents_table.py  check_fastembed_cache.py  check_llamacpp_refs.py  check_models.py  check_openclaw_config.py  check_qmd_procs.py  check_root_docs.py  cleanup_gguf.py  cleanup_llamacpp.py  (+35 more)
.github/workflows/: test.yml
_to_delete/: GAP_FILLING_PLAN.md  GAP_FILLING_REPORT.md  MODEL_DOWNLOAD_FAILURE_ANALYSIS.md  PRODUCTION_DEPLOYMENT_GAP.md  PROJECT_STATUS.md  PROJECT_STATUS_SUMMARY.md  README.md  TODO.md
_to_delete/docs/: AUTO_SERVER_DISCOVERY.md  DOCS_INDEX.md  DOC_CLEANUP_REPORT.md  README.md  UNIFIED_SERVER_ARCHITECTURE.md  architecture_decision_links.md
_to_delete/docs/requirement/: 02-design-document.md
docs/: 04-testing.md  05-metrics.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_COMPARISON.md  CONFIG_GUIDE.md  DOC_REORGANIZATION_REPORT.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_INTERFACE_SPEC.md  MCP_SERVER.md  MCP_SERVER_PROPOSAL.md  PROJECT_STATUS.md  README.md  SEARCH_VSEARCH_COMPARISON.md  UNIFIED_SERVER_ARCHITECTURE.md
docs/_to_delete/report/: AUDIT_REPORT.md  MEMORY_ANALYSIS.md  MODEL_INVENTORY.md  TECH_STACK_VARIANCE.md
docs/_to_delete/requirement/: 01-root-cause-analysis.md
docs/analysis/: CODE_REVIEW_SUMMARY.md  INFERENCE_ENGINE_SELECTION.md  MODELS_CURRENT.md  MODEL_DOWNLOAD_TIMING.md  RERANKER_EXPANSION_ONNX_PLAN.md  SQLITE_MIGRATION_PLAN.md  TS_PYTHON_GAP_ANALYSIS.md
docs/api/: MCP_COMPATIBILITY_ANALYSIS.md  MCP_INTERFACE_SPEC.md  MCP_REFACTORING_PLAN.md  MCP_REFACTORING_REPORT.md  README.md  compatibility.md  http-endpoints.md  implementation-guide.md  mcp-tools.md
docs/architecture/: ARCHITECTURE_DECISION_2026-02-15.md
docs/architecture/auto-discovery/: implementation.md  overview.md
docs/architecture/core/: overview.md  transport-design.md
docs/architecture/decisions/: 2026-02-15-client-server-separation.md
docs/compatibility/: CLI_DIFFERENCES.md  COMPATIBILITY_SUMMARY.md  MODIFICATION_PLAN.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md
docs/deprecated/: README.md
docs/deprecated/llama-cpp-python/: ARCHIVE_SUMMARY.txt  README.md
docs/deprecated/llama-cpp-python/reports/: LLAMA_CPP_PERFORMANCE_REPORT.md  embedding_benchmark_results.json
docs/deprecated/llama-cpp-python/scripts/: demo_llama_embedding.py  download_gguf_model.py  download_gguf_simple.py  test_bge_model.py  test_llama_embedding.py  test_llama_reranker.py  test_model_loading.py  test_qwen_reranker_loading.py
docs/guide/: FINAL_CONFIG.md
docs/report/: COMPATIBILITY_ANALYSIS.md  FIX_SUMMARY.md  TECH_STACK_ANALYSIS.md
docs/requirement/: 03-requirements.md  06-models.md
qmd/: __main__.py  cli.py  cli_main.py
qmd/cli/: __init__.py  _cleanup.py  _collection.py  _config.py  _context.py  _doc.py  _embed.py  _index.py  _search.py  _server.py  _system.py
qmd/database/: manager.py  schema.py
qmd/index/: crawler.py
qmd/llm/: engine.py
qmd/models/: config.py  document.py  downloader.py
qmd/search/: fts.py  hybrid.py  rerank.py  vector.py
qmd/server/: __init__.py  _endpoints.py  _middleware.py  _state.py  _worker.py  app.py  client.py  models.py  port_manager.py  process.py
qmd/utils/: __init__.py
scripts/: check_benchmarks.py  check_content_table.py  clean_db.py  diagnose_embed.py  download_embeddinggemma.py  setup.bat  setup.sh  test_cuda.py
test_docs/: hello.md  python.md  qmd.md
tests/: test_collection_add_optional_name.py  test_collection_add_simple.py  test_context_nodejs_compat.py  test_search_format.py  test_server.py
tests/benchmarks/: search_bench.py
tests/integration/: test_cli.py  test_http_endpoints.py
tests/unit/: test_config.py  test_contexts.py  test_core.py  test_database.py  test_rerank.py  test_search.py  test_search_ext.py
