[project]
name = "qmd-python"
version = "0.1.0"
description = "Query Markup Documents in Python"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "click>=8.1.0",
    "rich>=12.0.0",
    "chromadb>=0.4.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# CPU-only installation (default, most compatible)
cpu = [
    "torch>=2.0.0",  # CPU version
    "fastembed>=0.2.0",
    "transformers>=4.30.0",
]
# CUDA GPU installation (for RTX 1660Ti/2060/3060/4060+)
cuda = [
    "torch>=2.0.0+cu121",  # CUDA 12.1 (most stable for 1660Ti)
    "fastembed-gpu>=0.2.0",  # GPU-accelerated embedding
    "transformers>=4.30.0",
]
# MCP Server dependencies (for low VRAM systems)
server = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "psutil>=5.9.0",      # Process detection for auto-discovery
    "requests>=2.28.0",   # HTTP connection checking
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
qmd = "qmd.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=qmd --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["qmd"]
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 80.0
precision = 2
