[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qmd-python"
version = "0.1.0"
description = "Query Markup Documents in Python"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "click>=8.1.0",
    "rich>=12.0.0",
    "chromadb>=0.4.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
]

[tool.setuptools.packages.find]
include = ["qmd*"]
exclude = ["test_docs*", "node_modules*", "tests*"]

[project.optional-dependencies]
# CPU-only installation (default, most compatible)
cpu = [
    "torch>=2.0.0",
    "fastembed>=0.2.0",
    "transformers>=4.30.0",
]
# CUDA GPU installation (for RTX 1660Ti/2060/3060/4060+)
cuda = [
    "torch>=2.0.0",
    "fastembed-gpu>=0.2.0",
    "transformers>=4.30.0",
]
# MCP Server dependencies (for low VRAM systems)
server = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "psutil>=5.9.0",
    "requests>=2.28.0",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
qmd = "qmd.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=qmd --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["qmd"]
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 80.0
precision = 2
